--- a/2.html
+++ b/2.html
@@ -21,7 +21,7 @@
       in speech, or on other media. Along with HTML and JavaScript, CSS is a
       cornerstone technology used by most websites to create visually engaging
       webpages, user interfaces for web applications, and user interfaces for
-      many mobile applications.
+      many mobile applications. 잘보라고
     </p>
   </body>
 </html>
