--- a/1.html
+++ b/1.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>WEB</title>
+    <title>WEB1 - HTML</title>
     <meta charset="utf-8" />
   </head>
   <body>
-    <h1><a href=""> WEB </a></h1>
+    <h1><a href="index.html">WEB</a></h1>
     <ol>
-      <li><a href=""> HTML</a></li>
-      <li><a href=""> CSS</a></li>
-      <li><a href=""> JavaScript</a></li>
+      <li><a href="1.html">HTML</a></li>
+      <li><a href="2.html">CSS</a></li>
+      <li><a href="3.html">JavaScript</a></li>
     </ol>
     <h2>HTML</h2>
     <p>
       <a
         href="https://www.w3.org/TR/html5/"
         target="_blank"
-        title="html5 specification"
+        title="html5 speicification"
         >Hypertext Markup Language (HTML)</a
       >
       is the standard markup language for
@@ -30,10 +30,10 @@
     <p style="margin-top: 45px">
       HTML elements are the building blocks of HTML pages. With HTML constructs,
       images and other objects, such as interactive forms, may be embedded into
-      the rendered page. It provides a means to create structured documents by
-      denoting structural semantics for text such as headings, paragraphs,
-      lists, links, quotes and other items. HTML elements are delineated by
-      tags, written using angle brackets.
+      dfklsdfkldfsl the rendered page. It provides a means to create structured
+      documents by denoting structural semantics for text such as headings,
+      paragraphs, lists, links, quotes and other items. HTML elements are
+      delineated by tags, written using angle brackets.fdsfdzggㅇㄹㄴㄹㅇdfsdas
     </p>
   </body>
 </html>
